# UnwindAfrica

./: .env.example  .gitignore  NOMINATION_SETUP.txt  README.md  SETUP_NOTES.txt  VOTING_SYSTEM_COMPLETE.md  check_nominees.py  create_test_campaign.py  create_test_cards.py  create_test_nominees.py  create_test_vote.py  hometemp.html  pyproject.toml  render.yaml  requirement.txt  requirements.txt  rest_cards_import.csv  save_html.py  setup_test_campaign.py  test_auto_rest_card.py  test_html.txt  test_import.csv  test_voting_fixes.py  test_voting_system.py  transform_rest_card_csv.py
Web/: admin.py  forms.py  middleware.py  models.py  sitemaps.py  tests_community.py  urls.py  views.py  voting_views.py
Web/migrations/: 0001_initial.py  0002_event.py  0003_blogcategory_post_created_at_post_is_published_and_more.py  0004_remove_event_brief_text_remove_event_title_and_more.py  0005_alter_post_category.py  0006_event_created_at.py  0007_alter_event_options_remove_event_is_expired_and_more.py  0008_nominee_votingcampaign_vote_transaction_and_more.py  0009_communitymember_restcard_tokenwallet_and_more.py  0010_alter_restcard_card_number.py  0011_alter_transaction_reference.py  0012_pageview_session.py  0013_votingcampaign_grand_prize_and_more.py  0014_nominee_number.py  0015_vote_payment_status.py  0016_book.py  0017_edbritishtrialregistration.py  0018_frozenrestpoints.py  0019_alter_frozenrestpoints_created_at_and_more.py  0020_add_free_votes_to_restcard.py  (+2 more)
config/: settings.py  urls.py
dashboard/: admin.py  forms.py  models.py  urls.py  views.py  views1.py
(+110 files in other folders)
