[project]
name = "unwindafrica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.8.1",
    "dj-database-url==3.0.0",
    "django==5.2.3",
    "django-etc==1.4.0",
    "django-hitcount==1.3.5",
    "django-widget-tweaks==1.5.0",
    "gunicorn==23.0.0",
    "packaging==25.0",
    "pillow==11.3.0",
    "psycopg2-binary==2.9.10",
    "python-decouple==3.8",
    "python-dotenv==1.1.1",
    "requests>=2.32.5",
    "sqlparse==0.5.3",
    "typing-extensions==4.14.0",
    "tzdata==2025.2",
    "whitenoise==6.9.0",
]
